<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    tools:context=".ProfileFragment"
    android:id="@+id/profile_fragment_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/layout_border"
        android:paddingLeft="35dp"
        android:paddingTop="35dp"
        android:paddingRight="35dp"
        android:paddingBottom="35dp"
        android:orientation="vertical">

        <!-- Account Initials -->

        <RelativeLayout
            android:id="@+id/icon_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/title_user_initials"
                android:layout_centerInParent="true"
                android:src="@drawable/bg_circle" />

            <TextView
                android:id="@+id/user_initials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="JD"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <!-- Account Info -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Account Info"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- First Name -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="John"
                android:textSize="17sp" />

            <View
                android:id="@+id/firstname_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#e0e0e0" />
        </LinearLayout>

        <!-- Last Name -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/last_name"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Doe"
                android:textSize="17sp" />

            <View
                android:id="@+id/lastname_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#e0e0e0" />
        </LinearLayout>

        <!-- Username -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="jdoe"
                android:textSize="17sp" />

            <View
                android:id="@+id/username_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#e0e0e0" />
        </LinearLayout>

        <!-- Password -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Password"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btn_change_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_alignParentEnd="true"
                    android:minHeight="0dp"
                    android:background="@android:color/transparent"
                    android:text="@string/update_password"
                    android:textSize="16.9sp"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="password123"
                android:textSize="17sp"
                android:inputType="textPassword"/>

            <View
                android:id="@+id/password_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#e0e0e0" />
        </LinearLayout>

        <!-- Email -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="jdoe@gmail.com"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>